--- a/frontend/src/components/VenderProductList.css
+++ b/frontend/src/components/VenderProductList.css
@@ -11,7 +11,7 @@
 /* Header Buttons */
 .vendor-header-actions {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
   gap: 20px;
   margin-bottom: 30px;
 }
